fix: sidebar overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -158,8 +158,10 @@ a {
 
   .sidenav {
     background-color: $primary-color;
-    min-height: 100vh; 
-    max-height: 100%;
+height: 100vh; 
+  position: sticky;
+top: 0;
+// max-height: 100%;
     padding         : 1.5rem;
 
     @include lg {
